Add object menu functionality and enhance element interaction
- Include object menu script for future implementation.
- Add context menu event listener to rectangles for object menu access.
- Refactor move and resize handlers in selector for improved functionality.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="scripts/utils/elements.js"></script>
     <script src="scripts/utils/selector.js"></script>
     <script src="scripts/utils/contextmenu.js"></script>
+    <script src="scripts/utils/objectmenu.js"></script>
 </head>
 <body>
 </body>
