Refactor menu functionality: consolidate context and object menus into a single menu system, enhance menu creation logic, and improve event handling for menu interactions.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="scripts/globals.js"></script>
     <script src="scripts/utils/elements.js"></script>
     <script src="scripts/utils/selector.js"></script>
-    <script src="scripts/utils/contextmenu.js"></script>
-    <script src="scripts/utils/objectmenu.js"></script>
+    <script src="scripts/utils/menu.js"></script>
 </head>
 <body>
 </body>
